<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.n3.ex_01.StudantActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Formulario"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nome"
        android:hint="@string/Nome"
        android:ems="16"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/telefone"
        android:hint="@string/Telefone"
        android:ems="16"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/endereço"
        android:hint="@string/Endereço"
        android:ems="16"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/foto"
        android:hint="@string/Foto"
        android:ems="16"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nota"
        android:hint="@string/Nota"
        android:ems="16"
        />

    <EditText
        android:id="@+id/site_pessoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/Site_Pessoal"
        android:inputType="textEmailAddress|textAutoComplete"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCadastra"
        android:text="@string/cadastrar"
        />

</LinearLayout>
